# auto-diff

./: .gitignore  Cargo.toml  README.md  bump_version.sh  cargo_publish.sh
.github/workflows/: rust.yml
ann/: Cargo.toml  README.md
ann/examples/: mlp_mnist.rs  mlp_mnist_acc_on_test.rs
ann/src/: init.rs  lib.rs  minibatch.rs  optim.rs
auto-diff/: CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
auto-diff/examples/: alexnet.rs  cnn_mnist.rs  linear_regression.rs  logistic_regression.rs  mlp.rs  mlp_mnist.rs  mnist.rs
auto-diff/src/: compute_graph.rs  err.rs  lib.rs  op.rs  optim.rs  rand.rs  tensor.rs  var.rs  var_inner.rs
auto-diff/src/collection/: directed_graph.rs  generational_index.rs  graph.rs  mod.rs  undirected_graph.rs
auto-diff/src/op/: comparison.rs  convolution.rs  element.rs  image.rs  index_slicing.rs  linalg.rs  linear.rs  local.rs  loss.rs  macros.rs  mod.rs  nonlinear.rs  normalization.rs  pooling.rs  reduction.rs  vision.rs
auto-diff/src/serde/: compute_graph.rs  directed_graph.rs  generational_index.rs  mod.rs  op.rs  var.rs  var_inner.rs
auto-diff/src/tensor/: index_slicing.rs
auto-diff/tests/: test_auto_diff.rs  test_op.rs
benches/: Cargo.toml  elemwise_benchmark.rs  tensor_benchmark.rs
benches/benches/: convolution_benchmark.rs  elemwise_benchmark.rs  tensor_benchmark.rs
data-pipe/: Cargo.toml  README.md
data-pipe/src/: lib.rs  mnist.rs
data-pipe/src/dataloader/: mnist.rs  mod.rs
data-pipe/src/viewer/: image.rs
examples/: cnn_mnist.rs  draw_histo.rs  draw_image.rs  draw_scalar.rs  linear_regression.rs  linear_regression2.rs  logistic_regression.rs  mlp.rs  mlp_mnist.rs  mnist.rs
examples/data/: download.sh
extension-op/: Cargo.toml
extension-op/src/: lib.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
ops/: Cargo.toml
ops/src/: lib.rs  stn.rs
src/: collection.rs  compute_graph.rs  event_file_writer.rs  graph.rs  lib.rs  op.rs  optim.rs  proto.rs  rand.rs  record_writer.rs  summary.rs  summary_writer.rs  tensor.rs  var.rs
src/collection/: generational_index.rs  graph.rs
src/op/: act.rs  convolution.rs  linear.rs  local.rs  loss.rs  nonlinear.rs  normalization.rs
src/proto/: attr_value.proto  event.proto  graph.rs  layout.proto  node_def.rs  tensor.rs
src/tensor/: compare_tensor.rs  convolution.rs  gen_tensor.rs  index_slicing.rs  reduction.rs  typed_tensor.rs
tensor-rs/: Cargo.toml  README.md
tensor-rs/benches/: test_mm_benchmark.rs
tensor-rs/src/: lib.rs  quaternion.rs  tensor.rs  typed_tensor.rs
tensor-rs/src/serde/: gen_tensor.rs  mod.rs  tensor.rs  typed_tensor.rs
tensor-rs/src/tensor/: blas.rs  blas_tensor.rs  compare_tensor.rs  convolution.rs  cuda_helper.rs  cuda_tensor.rs  elemwise.rs  gen_tensor.rs  index_slicing.rs  linalg.rs  quaternion.rs  reduction.rs  typed_tensor.rs
tensor-rs/src/tensor_impl/: compare_tensor.rs  convolution.rs  cuda_tensor.rs  elemwise.rs  mod.rs
tensor-rs/src/tensor_impl/cuda_tensor/: convolution.rs  index_slicing.rs  mod.rs  reduction.rs
tensor-rs/src/tensor_impl/gen_tensor/: compare_tensor.rs  convolution.rs  elemwise.rs  index_slicing.rs  linalg.rs  mod.rs  rand.rs  reduction.rs
tensor-rs/src/tensor_impl/lapack_tensor/: blas.rs  blas_api.rs  convolution.rs  elemwise.rs  lapack_api.rs  linalg.rs  mod.rs
tensor-rs/src/tensor_trait/: compare_tensor.rs  convolution.rs  elemwise.rs  index_slicing.rs  linalg.rs  mod.rs  rand.rs  reduction.rs
tensor-rs/tests/: test_mm_benchmark.rs
tensorboard-rs/: .gitignore  Cargo.toml  README-dev.md  README.md  environment.yml
tensorboard-rs/examples/: draw_graph.rs  draw_histo.rs  draw_image.rs
tensorboard-rs/src/: event_file_writer.rs  lib.rs  masked_crc32c.rs  record_writer.rs  summary.rs  summary_writer.rs
tensorboard-rs/src/proto/: api.proto  api.rs  attr_value.rs  event.rs  graph.proto  layout.rs  node_def.proto  plugin_hparams.proto  plugin_hparams.rs  plugin_mesh.proto  plugin_mesh.rs  plugin_pr_curve.proto  plugin_pr_curve.rs  plugin_text.proto  plugin_text.rs  resource_handle.proto  resource_handle.rs  step_stats.proto  step_stats.rs  summary.proto  summary.rs  tensor.proto  tensor_shape.proto  tensor_shape.rs  types.proto  types.rs  update.sh  versions.proto  versions.rs
tests/: test_auto_diff.rs  test_gen_tensor.rs  test_graph.rs  test_op.rs  test_tensor.rs
