[package]
name = "auto-diff-ann"
version = "0.5.7"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
A neural network library in Rust.


"""
documentation = "https://docs.rs/auto-diff"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-diff = { path = "../auto-diff", version = "0.5.7" }

[dev-dependencies]
# one backend
openblas-src = "0.10" # or another backend of your choice