
[package]
name = "auto-diff"
version = "0.5.9"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
A neural network library in Rust.


"""
documentation = "https://docs.rs/auto-diff"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensor-rs = { path = "../tensor-rs", version = "0.5.9" }
auto-diff-macros = { path = "../macros", version = "0.5.9" }

num-traits = "0.2"

rand = "0.8"
rand_distr = "0.4"

serde = { version = "1.0", features = ["derive"], optional = true}

#lazy_static = { version = "1.4.0", optional = true}



[dev-dependencies]
criterion = "0.3"

# one backend
openblas-src = "0.10" # or another backend of your choice

# for examples
csv = "1.1"

#tensorboard-rs = { path = "../tensorboard-rs", version = "0.5.9"}

serde-pickle = {version = "0.6"}

#cargo-expand = "1"

[features]

default = ["use-f64", "use-serde"]

use-f32 = []
use-f64 = []

use-serde = ["serde"]
