[package]
name = "benches"
version = "0.0.0"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
benchmark for auto-diff


"""
documentation = "https://docs.rs/auto-diff"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensor-rs = { path = "../tensor-rs" , features = ["use-blas-lapack"]}
auto-diff = { path = "../auto-diff" }

ndarray = "0.12"
ndarray-linalg = "0.11"

[dev-dependencies]
criterion = "0.3"

# one backend
openblas-src = "0.10" # or another backend of your choice

# for examples
csv = "1.1"



[features]

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "tensor_benchmark"
harness = false

[[bench]]
name = "elemwise_benchmark"
harness = false

[[bench]]
name = "convolution_benchmark"
harness = false

