[package]
name = "auto-diff-macros"
version = "0.5.7"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
Macros for auto-diff.


"""
documentation = "https://docs.rs/auto-diff-macros"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

syn = { version = "1", features = ["full", "extra-traits"] }
quote = { version = "1" }
