[package]
name = "tensor-rs"
version = "0.5.3"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
A typeless tensor library


"""
documentation = "https://docs.rs/tensor-rs"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
# matrix library
ndarray = "0.12"
ndarray-linalg = "0.11"

rand = "0.8"
rand_distr = "0.4"

blas = { version = "0.20", optional = true }
openblas-src = { version = "0.9", optional = true }

#rcublas = { version = "0.5", optional = true }
cuda11-cudart-sys = { version = "0.3", optional = true }
cuda11-cutensor-sys = { version = "0.3", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true}
serde-pickle = {version = "0.6", optional = true}

[dev-dependencies]
criterion = "0.3"

# for examples
csv = "1.1"

tensorboard-rs = "0.2.2"

[features]

default = ["use-f64"]

use-f32 = []
use-f64 = []
use-usize = []
use-u8 = []

use-serde = ["serde", "serde-pickle"]

use-blas = ["blas", "openblas-src"]

use-cuda = ["cuda11-cudart-sys", "cuda11-cutensor-sys"]