[package]
name = "tensorboard-rs"
version = "0.5.5"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
Write data for Tensorboard from Rust.


"""
documentation = "https://docs.rs/tensorboard-rs"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.14"

tensorboard-proto = { path = "../../tensorboard-proto", version = "0.5.5" }

gethostname = "0.2.1"

image = "0.23.4"

#[dev-dependencies]
#protobuf-codegen = "2.14"


[features]

